[gd_scene load_steps=3 format=3 uid="uid://do23gcptel8rb"]

[ext_resource type="Script" path="res://Scenes/GameMap/HoverTile.gd" id="1_cgilp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1m4pd"]
size = Vector2(60, 60)

[node name="HoverTile" type="Area2D"]
z_index = 100
collision_layer = 3
collision_mask = 3
script = ExtResource("1_cgilp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1m4pd")

[node name="CanPlaceRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0, 0.756863, 0.219608, 0.235294)
metadata/_edit_use_anchors_ = true

[node name="CanDeleteRect" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 0, 0, 0.235294)
metadata/_edit_use_anchors_ = true

[node name="NoOptionRect" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.188235, 0.203922, 0.215686, 0.235294)
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
